conteudo sobre docker

--- a/docker/public-html/index.html
+++ b/docker/public-html/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Atualizando projeto lab do Docker.</p>
+    <p>O projeto agora esta sincronizado com um path a partir do host.</p>
 </body>
 </html>
